<resources>
    <!-- Main Activity -->
    <string name="app_name">Alarm Clock</string>
    <string name="content_desc_tabs">Navigation tabs for switching between pages</string>
    <string name="dialog_title_overlay">Overlay Permission Needed</string>
    <string name="dialog_overlay_msg">To let alarm notifications display over other apps, tap <b>ALLOW</b> from Android Settings</string>

    <!-- Alarms Fragment -->
    <string name="text_snoozed">SNOOZED</string>
    <string name="text_select_all">Select All</string>
    <string name="text_unselect_all">Unselect All</string>
    <string name="content_desc_add_btn">Add new alarm</string>
    <string name="content_desc_delete_btn">Delete selected alarms</string>

    <!-- Theme Settings -->
    <string name="label_theme">Select A Theme</string>
    <string name="message_theme_line1">Daylight or Midnight</string>
    <string name="message_theme_line2">Style your space with ease</string>
    <string name="text_dark">Dark</string>
    <string name="text_light">Light</string>

    <!-- Alarm Info Activity -->
    <string name="text_weekly">Weekly</string>
    <string name="text_name">Name</string>
    <string name="text_alarm_name">Alarm Name</string>
    <string name="text_timezone">Timezone</string>
    <string name="text_alarm_tone">Alarm Tone</string>
    <string name="content_desc_set_snooze">Set snooze length</string>
    <string name="text_vibration">Vibration</string>
    <string name="content_desc_set_vibr">Set vibration status</string>
    <string name="text_days">DAYS</string>
    <string name="text_hours">HOURS</string>
    <string name="text_minutes">MINUTES</string>
    <string name="text_seconds">SECONDS</string>
    <string name="text_colon">:</string>
    <string name="content_desc_calendar">Set alarm\'s date</string>
    <string name="dialog_title">ALERT</string>
    <string name="dialog_snooze_title">Set Snooze Length</string>
    <string name="text_hide_countdown">Hide Countdown</string>
    <string name="text_show_countdown">Show Countdown</string>
    <string name="dialog_changes_msg">Discard or save changes?</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_enter_time">ENTER TIME</string>

    <!-- Notification Activity -->
    <string name="text_dismiss">Dismiss</string>
    <string name="text_snooze">Snooze</string>

    <!-- Converter Fragment -->
    <string name="content_desc_location">Map marker</string>
    <string name="text_convert">CONVERT</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_time">Time:</string>
    <string name="text_date">Date:</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>

    <!-- Attributions Activity -->
    <string name="label_attributions_link">View App Attributions</string>
    <string name="title_attributions">APP ATTRIBUTIONS</string>
    <string name="subtitle_attributions">Acknowledging Creative Contributors</string>
    <string name="list_title_attributions">Image assets provided by the following creators via <b><i>www.flaticon.com:</i></b></string>
    <string name="content_desc_attributions">List of image creators</string>
    <string name="content_desc_attributions_img">Person painting</string>

    <!--NumberPicker -->
    <string name="snooze_length_unit">minute(s)</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Leanback TestActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>